fixed ContactIcon spacing and About page's Titlebar

--- a/src/Components/Titlebar/Titlebar.css
+++ b/src/Components/Titlebar/Titlebar.css
@@ -1,6 +1,6 @@
 	.Titlebar-title {
 		text-align: center;
-		color: #DFF0D8;
+		color: #70BCC9;
 		margin-top: 70px;
 		margin-bottom: 4%;
 		font-size: 70pt;
